# bevy_efficient_forest_rendering

./: Cargo.toml  LICENSE  README-AI.md  README.md  run_forest_example_web.sh
assets/: bush.glb  mushroom.glb  rock.glb  tree.glb
assets/shaders/: chunk_instancing.wgsl  grass.wgsl
examples/: forest.rs  single_chunk_grass.rs
examples/helpers/: framerate.rs  mod.rs  orbit.rs
src/: lib.rs
src/camera/: mod.rs  orbit.rs
src/rendering/: chunk_grass.rs  chunk_instancing.rs  mod.rs
